[tool.poetry]
name = "RL_Blackjack"
version = "0.1.0"
description = ""
authors = ["Author Name <author@example.com>"]
# readme = "README.md"
# license = "BSD"
packages = [
  { include = "fixed_policy" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
tqdm = "^4.66.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"